@@ -146,6 +146,11 @@ public class ColumnFamily implements IColumnContainer, IIterableColumns
         return columns.size();
     }
 
+    public boolean isEmpty()
+    {
+        return columns.isEmpty();
+    }
+
     public boolean isSuper()
     {
         return type == ColumnFamilyType.Super;
